# ai-langchain-apps

./: README.md  main.py  pyproject.toml
notebooks/01/: 01-langchain-examples.ipynb
notebooks/02/: 07-QA_across_documents.ipynb
research-summarization-engine/: chain_1_1.py  chain_2_1.py  chain_try_1_1.py  chain_try_1_2.py  chain_try_2_1.py  chain_try_3_1.py  chain_try_4_1.py  chain_try_5_1.py  llm_models.py  prompts.py  research_engine_seq.py  web_scraping.py  web_scraping_try.py  web_searching_try.py
research-summarization-engine-langgraph/: main.py  models.py  prompts.py
research-summarization-engine-langgraph/agents/: assistant_selector.py  report_writer.py  web_researcher.py
