[project]
name = "ai-langchain-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.14.4",
    "docx2txt>=0.9",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
